add get user route
